Fixed spacing (position,margins,padding and width) in the greeting's introduction article (heading and description)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -95,8 +95,9 @@ body,
 h1,
 h2,
 h3,
-p {
+section p {
   margin: 0;
+  padding: 0%;
 }
 /* Font sizing in elements */
 body {
